# SFML-TheRPGGame

./: CMakeLists.txt  README.md
src/: main.cpp
src/Game/: Game.cpp  Game.h
src/Models/: Dialog.h  TextBoxType.h  UserOption.h
src/Resources/: ResourceManager.cpp  ResourceManager.h
src/Scenes/: IScene.h  SceneManager.cpp  SceneManager.h  SceneType.h
src/Scenes/MenuScene/: MenuScene.cpp  MenuScene.h
src/Scenes/TypeAScene/: TypeAScene.cpp  TypeAScene.h
src/UI/ChoiceGrid/: ChoiceGrid.cpp  ChoiceGrid.h
src/UI/IButton/: IButton.h
src/UI/IUIElement/: IUIElement.h
src/UI/Image/: Image.cpp  Image.h
src/UI/MenuButton/: MenuButton.cpp  MenuButton.h
src/UI/SceneBackgorund/: SceneBackground.cpp  SceneBackground.h
src/UI/TextElements/: ScrollableTextContainer.cpp  ScrollableTextContainer.h  TextBox.cpp  TextBox.h
src/UI/UIManager/: UIManager.cpp  UIManager.h
src/UI/UIUtils/: UIUtils.cpp  UIUtils.h
